# A200D_GPS_MTD

./: .gitignore  CMakeLists.txt  Makefile  N32G43x Version history.txt  README.txt
cmake/: mcu_gcc.cmake
cmake/mcu/: common.cmake  devices.cmake  utilities.cmake
doc/: BSP硬件资源分布.docx  N32G43x开发指南.docx  OTA升级验证和测试方案.docx  spi-flash存储规划.docx
firmware/: N32G435.svd
firmware/CMSIS/device/: n32g43x.h  n32g43x_flash.ld  system_n32g43x.c
firmware/CMSIS/device/startup/: startup_n32g43x.s  startup_n32g43x_gcc.s  startup_n32g43x_gcc_rtt.s
firmware/n32g43x_algo_lib/inc/: n32g43x_aes.h  n32g43x_algo_common.h  n32g43x_des.h  n32g43x_hash.h  n32g43x_rng.h
firmware/n32g43x_periph_lib/inc/: RCC_MSI_Trimming.h
firmware/n32g43x_std_periph_driver/inc/: n32g43x_comp.h  n32g43x_dbg.h  n32g43x_dma.h  n32g43x_exti.h  n32g43x_gpio.h  n32g43x_i2c.h  n32g43x_lpuart.h  n32g43x_tim.h  n32g43x_usart.h
firmware/n32g43x_std_periph_driver/src/: n32g43x_dma.c  n32g43x_flash.c  n32g43x_gpio.c  n32g43x_lpuart.c  n32g43x_rcc.c  n32g43x_tim.c  n32g43x_usart.c
jlink/: app-flash.jlink  boot-flash.jlink  flash.jlink
middlewares/cip/: cip_sockmgr.c  cip_sockmgr.h
middlewares/gcc-nano/: syscalls.c
middlewares/gnss_port/: gnss_if.c  gnss_port.c  gnss_port.h
middlewares/gps/: GPS.c  gps.h
middlewares/http/: http_client.c  http_client.h
middlewares/modbus_rt/modbus_rt/modbus_rt/: modbus_rtu.c
middlewares/modbus_rt/modbus_rt/platform/rt_thread/: modbus_rt_platform_serial.h
middlewares/modbus_rt/rtt_uart/: rtt_uart.c  rtt_uart.h
middlewares/nmea/: arduino_compat.h
middlewares/rt-thread/components/drivers/include/drivers/: serial.h
middlewares/rt-thread/components/drivers/spi/: spi_flash_sfud.c
middlewares/rt-thread/components/finsh/: cmd.c  finsh_api.h  finsh_compiler.c  finsh_heap.c  finsh_init.c  finsh_node.c  finsh_ops.c  finsh_parser.c  finsh_var.c  finsh_vm.c
middlewares/sensor/: bh1750.c  bh1750.h  sht3x.c  sht3x.h
middlewares/utils/: bcd.c  bcd.h  cb_buffer.c  cb_buffer.h  utils.h
projects/Bootloader/: CMakeLists.txt  readme.txt
projects/Bootloader/APP/: link.lds
projects/Bootloader/APP/inc/: main.h  spi_flash.h
projects/Bootloader/APP/src/: main.c  n32g43x_it.c  spi_flash.c
projects/Bootloader/GCC/: Makefile
projects/Bootloader/MDK-ARM/: Bootloader.uvguix.Administrator  Bootloader.uvoptx  Bootloader.uvprojx  JLinkLog.txt
projects/Bootloader/update/: datasave.c  datasave.h  flash_data_def.h  n32g43x_flash_slm.c  public.c  public.h
projects/LedBlink/: CMakeLists.txt  readme.txt
projects/LedBlink/APP/inc/: main.h  n32g43x_it.h
projects/LedBlink/APP/src/: main.c  n32g43x_it.c
projects/LedBlink/GCC/: Makefile
projects/LedBlink/MDK-ARM/: LedBlink.uvoptx  LedBlink.uvprojx
projects/n32g43x_RTT_UART/: CMakeLists.txt  README.txt
projects/n32g43x_RTT_UART/APP/: link.lds
projects/n32g43x_RTT_UART/APP/inc/: board.h  main.h  n32g43x_it.h  rtconfig.h
projects/n32g43x_RTT_UART/APP/src/: board.c  main.c  n32g43x_it.c
projects/n32g43x_RTT_UART/DeviceDrivers/adc/inc/: drv_adc.h
projects/n32g43x_RTT_UART/DeviceDrivers/adc/src/: drv_adc.c
projects/n32g43x_RTT_UART/DeviceDrivers/can/inc/: drv_can.h
projects/n32g43x_RTT_UART/DeviceDrivers/can/src/: drv_can.c
projects/n32g43x_RTT_UART/DeviceDrivers/dac/inc/: drv_dac.h
projects/n32g43x_RTT_UART/DeviceDrivers/dac/src/: drv_dac.c
projects/n32g43x_RTT_UART/DeviceDrivers/gpio/inc/: drv_gpio.h
projects/n32g43x_RTT_UART/DeviceDrivers/gpio/src/: drv_gpio.c
projects/n32g43x_RTT_UART/DeviceDrivers/i2c/src/: drv_i2c.c
projects/n32g43x_RTT_UART/DeviceDrivers/rtc/inc/: drv_rtc.h
projects/n32g43x_RTT_UART/DeviceDrivers/rtc/src/: drv_rtc.c
projects/n32g43x_RTT_UART/DeviceDrivers/spi/inc/: drv_spi.h
projects/n32g43x_RTT_UART/DeviceDrivers/spi/src/: drv_spi.c
projects/n32g43x_RTT_UART/DeviceDrivers/tim/inc/: drv_hwtimer.h
projects/n32g43x_RTT_UART/DeviceDrivers/tim/src/: drv_hwtimer.c
projects/n32g43x_RTT_UART/DeviceDrivers/uart/inc/: drv_usart.h
projects/n32g43x_RTT_UART/DeviceDrivers/uart/src/: drv_usart.c
projects/n32g43x_RTT_UART/DeviceDrivers/watchdog/src/: drv_wdt.c
projects/n32g43x_RTT_UART/GCC/: Makefile
projects/n32g43x_RTT_UART/MDK-ARM/: JLinkLog.txt  UART_DEVICE_REGISTER.uvguix.Administrator  UART_DEVICE_REGISTER.uvoptx  UART_DEVICE_REGISTER.uvprojx
projects/n32g43x_RTT_UART/bsp/: bsp.c  bsp.h  flash_data_def.h  io_usr_cfg.h  spi_file_sys.c  spi_file_sys.h  spi_flash_w25q.c  spi_flash_w25q.h  system_bsp.h  update_file_define.h
projects/n32g43x_RTT_UART/business/: business.h  i2c_senser.c  i2c_sensor.h  meter.c  meter.h  modbus_m.c  modbus_m.h  setting.c  setting.h  status.c  status.h
projects/n32g43x_RTT_UART/gnss_sk/: gnss_if.h  gnss_sk.c  gnss_sk.h
projects/n32g43x_RTT_UART/gnss_sk/gps/: GPS.c
projects/n32g43x_RTT_UART/gnss_sk/nmea/: MicroNMEA.c  MicroNMEA.h
projects/n32g43x_RTT_UART/gsm/: cip_sockmgr.c  cip_sockmgr.h  gsm.c  gsm.h
projects/n32g43x_RTT_UART/modbus_rt/modbus_rt/modbus_rt/: modbus_config.h
projects/n32g43x_RTT_UART/modbus_rt/modbus_rt/platform/rt_thread/: modbus_rt_platform_serial.c  modbus_rt_platform_thread.c  modbus_rt_platform_thread.h
projects/n32g43x_RTT_UART/modbus_rt/rtt_uart/: rtt_uart.c  rtt_uart.h
projects/n32g43x_RTT_UART/protocol/: protocol.h
projects/n32g43x_RTT_UART/protocol/gb905/: gb905_control.c  gb905_control.h  gb905_operate.c  gb905_operate.h  gb905_param.c  gb905_param.h  gb905_protocol.c  gb905_protocol.h  gb905_remote.c  gb905_remote.h  gb905_report.c  gb905_report.h
projects/n32g43x_RTT_UART/protocol/http/: http_client.c  module_http.c  module_http.h
projects/n32g43x_RTT_UART/utils/: utils.h
projects/n32g43x_RTT_UART/utils/struct2json/: cJSON.c  s2j.c
tool/: Nationstech.N32G43x_DFP.0.9.6.pack  burn.sh  开发环境配置.txt
